add pseudo element

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <a class="navigation__logo" href="#">
             <img src="img/svg/CPS-logo.svg" alt="Логотип CPS" />
           </a>
+          <div class="navigation__divider"></div>
         </div>
         <div class="navigation__inner-right">
           <div class="navigation__additionally">
@@ -26,6 +27,7 @@
             </a>
             <a class="navigation__item navigation__item--icon--avatar" href="#">
             </a>
+            <div class="navigation__divider"></div>
           </div>
           <a class="navigation__button" href="#">
             <span class="navigation__text">Оставить заявку</span>
