fix styles & edit html

--- a/index.html
+++ b/index.html
@@ -35,30 +35,28 @@
           </a>
           <a class="navigation__button" href="#">
             <span class="navigation__text">Статус ремонта</span>
-            <div class="navigation__item navigation__item--icon--search"></div>
+            <div
+              class="navigation__item navigation__item--icon--checkstatus"
+            ></div>
           </a>
         </div>
       </nav>
     </header>
 
     <main class="main">
-      <div class="wrapper">
-        <div class="title">
-          <h1>Услуги и сервисы</h1>
-        </div>
+      <div class="title">
+        <h1>Услуги и сервисы</h1>
+      </div>
 
-        <div class="slide-menu">
-          <button class="slide-menu__item slide-menu__item--active text">
-            Ремонтируемые устройства
-          </button>
-          <button class="slide-menu__item text">Дополнительные услуги</button>
-          <button class="slide-menu__item text">Цены на услуги</button>
-          <button class="slide-menu__item text">
-            Адреса сервисных центров
-          </button>
-          <button class="slide-menu__item text">Специальные цены</button>
-          <button class="slide-menu__item text">Отзывы</button>
-        </div>
+      <div class="slide-menu wrapper">
+        <button class="slide-menu__item slide-menu__item--active text">
+          Ремонтируемые устройства
+        </button>
+        <button class="slide-menu__item text">Дополнительные услуги</button>
+        <button class="slide-menu__item text">Цены на услуги</button>
+        <button class="slide-menu__item text">Адреса сервисных центров</button>
+        <button class="slide-menu__item text">Специальные цены</button>
+        <button class="slide-menu__item text">Отзывы</button>
       </div>
 
       <div class="container">
