--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
       </nav>
     </header>
 
-    <main class="main">
+    <div class="main-content">
       <div class="title">
         <h1>Услуги и сервисы</h1>
       </div>
 
       <div class="slide-menu wrapper">
-        <button class="slide-menu__item slide-menu__item--active text">
+        <a href="#" class="slide-menu__item slide-menu__item--active text">
           Ремонтируемые устройства
-        </button>
-        <button class="slide-menu__item text">Дополнительные услуги</button>
-        <button class="slide-menu__item text">Цены на услуги</button>
-        <button class="slide-menu__item text">Адреса сервисных центров</button>
-        <button class="slide-menu__item text">Специальные цены</button>
-        <button class="slide-menu__item text">Отзывы</button>
+        </a>
+        <a href="#" class="slide-menu__item text">Дополнительные услуги</a>
+        <a href="#" class="slide-menu__item text">Цены на услуги</a>
+        <a href="#" class="slide-menu__item text">Адреса сервисных центров</a>
+        <a href="#" class="slide-menu__item text">Специальные цены</a>
+        <a href="#" class="slide-menu__item text">Отзывы</a>
       </div>
 
       <div class="container">
@@ -78,6 +78,6 @@
         </div>
         <img class="image" src="img/CPS.jpg" alt="CPS баннер" />
       </div>
-    </main>
+    </div>
   </body>
 </html>
