--- a/sidebar.html
+++ b/sidebar.html
@@ -11,7 +11,7 @@
   </head>
   <body class="body">
     <aside class="sidebar">
-      <nav class="sidebar-navigation">
+      <nav class="navigation sidebar-navigation">
         <a href="#" class="navigation__item navigation__item--icon--close"></a>
         <img src="img/svg/CPS-logo.svg" alt="Логотип CPS" />
         <a
@@ -56,7 +56,7 @@
       </ul>
 
       <footer class="sidebar-footer sidebar-footer--position--bottom">
-        <div class="sidebar-footer__icons">
+        <div class="navigation sidebar-footer__icons">
           <button
             class="navigation__item navigation__item--icon--phone"
           ></button>
