change button tag to a tag

--- a/sidebar.html
+++ b/sidebar.html
@@ -22,36 +22,37 @@
 
       <ul class="sidebar-menu">
         <li class="sidebar-menu__item">
-          <button
+          <a
+            href="#"
             class="sidebar-menu__button sidebar-menu__button--active text"
           >
             Ремонт техники
-          </button>
+          </a>
         </li>
         <li class="sidebar-menu__item">
-          <button class="sidebar-menu__button text">Услуги и сервисы</button>
+          <a href="#" class="sidebar-menu__button text">Услуги и сервисы</a>
         </li>
         <li class="sidebar-menu__item">
-          <button class="text sidebar-menu__button">
+          <a href="#" class="text sidebar-menu__button">
             Корпоративным клиентам
-          </button>
+          </a>
         </li>
         <li class="sidebar-menu__item">
-          <button class="sidebar-menu__button text">Продавцам техники</button>
+          <a href="#" class="sidebar-menu__button text">Продавцам техники</a>
         </li>
         <li class="sidebar-menu__item">
-          <button class="sidebar-menu__button text">Партнерам</button>
+          <a href="#" class="sidebar-menu__button text">Партнерам</a>
         </li>
         <li class="sidebar-menu__item">
-          <button class="sidebar-menu__button text">Производителям</button>
+          <a href="#" class="sidebar-menu__button text">Производителям</a>
         </li>
         <li class="sidebar-menu__item">
-          <button class="sidebar-menu__button text">
+          <a href="#" class="sidebar-menu__button text">
             Наши сервисные центры
-          </button>
+          </a>
         </li>
         <li class="sidebar-menu__item">
-          <button class="sidebar-menu__button text">Контакты</button>
+          <a href="#" class="sidebar-menu__button text">Контакты</a>
         </li>
       </ul>
 
