--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </p>
 
           <button class="read-more">
-            <img src="img/svg/readmore.svg" alt="" />
+            <img class="read-more__img" src="img/svg/readmore.svg" alt="" />
             <span class="read-more__text text">Читать далее</span>
           </button>
         </div>
